[package]
name = "mssql_rs"
version = "0.1.0"
edition = "2021"
description = "High level MSSQL library"


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bb8 = "0.8.1"
async-trait = "0.1.77"
tiberius = { version = "0.12.2", features = ["sql-browser-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
futures-util = "0.3.30"
thiserror = "1.0.56"
